--- a/SendSkeleton/SendSkeleton.vcxproj.filters
+++ b/SendSkeleton/SendSkeleton.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="tinyxml2.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="..\FaceDetection\FaceDetection.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SkeletonFormat.h">
@@ -33,6 +36,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="tinyxml2.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\FaceDetection\Facedetector.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
